# backend/jnstore-sboot-orch/src/main/java/br/com/jnstore/sboot/orch/controller/ProdutoController.java
@@ -2,6 +2,7 @@ package br.com.jnstore.sboot.orch.controller;
 
 import br.com.jnstore.sboot.atom.estoque.api.ProdutosApi;
 import br.com.jnstore.sboot.atom.estoque.model.ProdutoRepresetation;
+import br.com.jnstore.sboot.atom.vendas.model.ItemVendaProdutoRepresentation;
 import br.com.jnstore.sboot.orch.service.ProdutoService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -49,5 +50,15 @@ public class ProdutoController implements ProdutosApi {
     @Override
     public ResponseEntity<Object> getAllPaginado(Integer page, Integer size, List<String> sort, String termo) {
         return ResponseEntity.ok(service.getAllPaginado(page, size, sort, termo));
+    }
+
+    @Override
+    public ResponseEntity<List<ProdutoRepresetation>> getBaixoEstoque(Integer limit) {
+        return ResponseEntity.ok(service.getBaixoEstoque(limit));
+    }
+
+    @Override
+    public ResponseEntity<List<ProdutoRepresetation>> getEmFalta(Integer limit) {
+        return ResponseEntity.ok(service.getEmFalta(limit));
     }
 }
